force-app/main/default/objects/ApexUnexpectedException__c/ApexUnexpectedException__c.object-meta.xml
<CustomObject>
    <label>Apex Unexpected Exception</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Unexpected Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>