force-app/main/default/objects/ApexUnexpectedException__c/fields/ApexEntityName__c.field-meta.xml
<CustomField>
    <fullName>ApexEntityName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apex Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>