force-app/main/default/objects/ApexUnexpectedException__c/fields/EventLogFileParsing__c.field-meta.xml
<CustomField>
    <fullName>EventLogFileParsing__c</fullName>
    <label>EventLogFile Parsing</label>
    <referenceTo>EventLogFileParsing__c</referenceTo>
    <relationshipLabel>Apex Unexpected Exceptions</relationshipLabel>
    <relationshipName>ApexUnexpectedExceptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>