force-app/main/default/objects/ApexUnexpectedException__c/fields/ExceptionMessageSummary__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessageSummary__c</fullName>
    <description>For list views and querying.

Set by Apex Trigger ApexUnexpectedExceptionTrigger.  Strips the prefix with the org name from the Exception Message, and abbreviates it to a max of 255 characters.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Message Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>