force-app/main/default/objects/ApexUnexpectedException__c/fields/HasUnmappedValues__c.field-meta.xml
<CustomField>
    <fullName>HasUnmappedValues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically set to true when UnmappedValues__c is not null and has length &gt; 0, otherwise set to false.  See Apex class: ApexUnexpectedExceptionTriggerHandler</description>
    <label>HasUnmappedValues</label>
    <type>Checkbox</type>
</CustomField>